First version of Indexer content manager API
